<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/colour"
        android:title="@string/menuitem_colour"
        android:icon="@drawable/ic_color_lens_white_24dp"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/line_width"
        android:title="@string/menuitem_line_width"
        android:icon="@drawable/ic_edit_white_24dp"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/delete_drawing"
        android:title="@string/menuitem_delete"
        android:icon="@drawable/ic_delete_white_24dp"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/save"
        android:title="@string/menuitem_save"
        android:icon="@drawable/ic_save_white_24dp"
        app:showAsAction="ifRoom" />

</menu>