<?xml version="1.0" encoding="utf-8"?>
<GridLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/colourDialogGridLayout"
    android:columnCount="2"
    android:orientation="vertical"
    android:useDefaultMargins="true"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/alphaTextView"
        android:text="@string/label_alpha"
        android:layout_column="0"
        android:layout_row="0"
        android:layout_gravity="right|center_vertical" />

    <SeekBar
        android:id="@+id/alphaSeekBar"
        android:layout_column="1"
        android:layout_gravity="fill_horizontal"
        android:layout_row="0"
        android:max="255" />

    <TextView
        android:id="@+id/redTextView"
        android:text="@string/label_red"
        android:layout_column="0"
        android:layout_row="1"
        android:layout_gravity="right|center_vertical"/>

    <SeekBar
        android:id="@+id/redSeekBar"
        android:layout_column="1"
        android:layout_gravity="fill_horizontal"
        android:layout_row="1"
        android:max="255" />

    <TextView
        android:id="@+id/greenTextView"
        android:text="@string/label_green"
        android:layout_column="0"
        android:layout_row="2"
        android:layout_gravity="right|center_vertical"/>

    <SeekBar
        android:id="@+id/greenSeekBar"
        android:layout_column="1"
        android:layout_gravity="fill_horizontal"
        android:layout_row="2"
        android:max="255" />

    <TextView
        android:id="@+id/blueTextView"
        android:text="@string/label_blue"
        android:layout_column="0"
        android:layout_row="3"
        android:layout_gravity="right|center_vertical"/>

    <SeekBar
        android:id="@+id/blueSeekBar"
        android:layout_column="1"
        android:layout_gravity="fill_horizontal"
        android:layout_row="3"
        android:max="255" />

    <View
        android:id="@+id/colourView"
        android:layout_height="@dimen/colour_view_height"
        android:layout_column="0"
        android:layout_columnSpan="2"
        android:layout_gravity="fill_horizontal" />
</GridLayout>