<?xml version="1.0" encoding="utf-8"?>
<GridLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/colorDialogGridLayout"
    android:background="#1a000000"
    android:columnCount="2"
    android:orientation="vertical"
    android:useDefaultMargins="true"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/alphaTextView"
        android:text="@string/label_alpha"
        android:layout_column="0"
        android:layout_row="0"
        android:layout_gravity="right|center_vertical" />

    <SeekBar
        android:id="@+id/alphaSeekBar"
        android:layout_column="1"
        android:layout_gravity="fill_horizontal"
        android:layout_row="0"
        android:max="255" />

    <TextView
        android:id="@+id/redTextView"
        android:text="@string/label_red"
        android:layout_column="0"
        android:layout_row="1"
        android:layout_gravity="right|center_vertical"/>

    <SeekBar
        android:id="@+id/redSeekBar"
        android:layout_column="1"
        android:layout_gravity="fill_horizontal"
        android:layout_row="1"
        android:max="255" />

    <TextView
        android:id="@+id/greenTextView"
        android:text="@string/label_green"
        android:layout_column="0"
        android:layout_row="2"
        android:layout_gravity="right|center_vertical"/>

    <SeekBar
        android:id="@+id/greenSeekBar"
        android:layout_column="1"
        android:layout_gravity="fill_horizontal"
        android:layout_row="2"
        android:max="255" />

    <TextView
        android:id="@+id/blueTextView"
        android:text="@string/label_blue"
        android:layout_column="0"
        android:layout_row="3"
        android:layout_gravity="right|center_vertical"/>

    <SeekBar
        android:id="@+id/blueSeekBar"
        android:layout_column="1"
        android:layout_gravity="fill_horizontal"
        android:layout_row="3"
        android:max="255" />

    <GridLayout
        android:id="@+id/cdf_preset_colors_top"
        android:layout_column="0"
        android:layout_columnSpan="2"
        android:layout_gravity="center_horizontal"
        android:columnCount="5"
        android:orientation="vertical"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin">

        <!-- TODO: Refactor buttons as separate drawables with borders -->

        <TextView
            android:id="@+id/cdf_preset_color_redText"
            android:text="@string/label_red"
            android:layout_column="0"
            android:layout_gravity="center"
            android:layout_row="0" />

        <Button
            android:id="@+id/cdf_preset_color_redButton"
            android:background="@color/red"
            android:layout_height="@dimen/cc_fragment_button_height"
            android:layout_width="@dimen/cc_fragment_button_width"
            android:layout_column="0"
            android:layout_gravity="center"
            android:layout_row="1"
            android:layout_margin="10dp" />

        <TextView
            android:id="@+id/cdf_preset_color_orangeText"
            android:text="@string/label_orange"
            android:layout_column="1"
            android:layout_gravity="center"
            android:layout_row="0" />

        <Button
            android:id="@+id/cdf_preset_color_orangeButton"
            android:background="@color/orange"
            android:layout_height="@dimen/cc_fragment_button_height"
            android:layout_width="@dimen/cc_fragment_button_width"
            android:layout_column="1"
            android:layout_gravity="center"
            android:layout_row="1"
            android:layout_margin="10dp" />

        <TextView
            android:id="@+id/cdf_preset_color_yellowText"
            android:text="@string/label_yellow"

            android:layout_column="2"
            android:layout_gravity="center"
            android:layout_row="0" />

        <Button
            android:id="@+id/cdf_preset_color_yellowButton"
            android:background="@color/yellow"
            android:layout_height="@dimen/cc_fragment_button_height"
            android:layout_width="@dimen/cc_fragment_button_width"
            android:layout_column="2"
            android:layout_gravity="center"
            android:layout_row="1"
            android:layout_margin="10dp"/>

        <TextView
            android:id="@+id/cdf_preset_color_greenText"
            android:text="@string/label_green"
            android:layout_column="3"
            android:layout_gravity="center"
            android:layout_row="0" />

        <Button
            android:id="@+id/cdf_preset_color_greenButton"
            android:background="@color/green"
            android:layout_height="@dimen/cc_fragment_button_height"
            android:layout_width="@dimen/cc_fragment_button_width"
            android:layout_column="3"
            android:layout_gravity="center"
            android:layout_row="1"
            android:layout_margin="10dp" />

        <TextView
            android:id="@+id/cdf_preset_color_blueText"
            android:text="@string/label_blue"
            android:layout_column="4"
            android:layout_gravity="center"
            android:layout_row="0" />

        <Button
            android:id="@+id/cdf_preset_color_blueButton"
            android:background="@color/blue"
            android:layout_height="@dimen/cc_fragment_button_height"
            android:layout_width="@dimen/cc_fragment_button_width"
            android:layout_column="4"
            android:layout_gravity="center"
            android:layout_row="1"
            android:layout_margin="10dp" />

    </GridLayout>

    <GridLayout
        android:id="@+id/cdf_preset_colors_bottom"
        android:layout_column="0"
        android:layout_columnSpan="2"
        android:layout_gravity="center_horizontal"
        android:columnCount="4"
        android:orientation="vertical"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin">

        <TextView
            android:id="@+id/cdf_preset_color_indigoText"
            android:text="@string/label_indigo"
            android:layout_column="0"
            android:layout_gravity="center"
            android:layout_row="3" />

        <Button
            android:id="@+id/cdf_preset_color_indigoButton"
            android:background="@color/indigo"
            android:layout_height="@dimen/cc_fragment_button_height"
            android:layout_width="@dimen/cc_fragment_button_width"
            android:layout_column="0"
            android:layout_gravity="center"
            android:layout_row="4"
            android:layout_margin="10dp" />

        <TextView
            android:id="@+id/cdf_preset_color_violetText"
            android:text="@string/label_violet"
            android:layout_column="1"
            android:layout_gravity="center"
            android:layout_row="3" />

        <Button
            android:id="@+id/cdf_preset_color_violetButton"
            android:background="@color/violet"
            android:layout_height="@dimen/cc_fragment_button_height"
            android:layout_width="@dimen/cc_fragment_button_width"
            android:layout_column="1"
            android:layout_gravity="center"
            android:layout_row="4"
            android:layout_margin="10dp" />

        <TextView
            android:id="@+id/cdf_preset_color_whiteText"
            android:text="@string/label_white"
            android:layout_column="2"
            android:layout_gravity="center"
            android:layout_row="3" />

        <Button
            android:id="@+id/cdf_preset_color_whiteButton"
            android:background="@color/white"
            android:layout_height="@dimen/cc_fragment_button_height"
            android:layout_width="@dimen/cc_fragment_button_width"
            android:layout_column="2"
            android:layout_gravity="center"
            android:layout_row="4"
            android:layout_margin="10dp" />

        <TextView
            android:id="@+id/cdf_preset_color_blackText"
            android:text="@string/label_black"
            android:layout_column="3"
            android:layout_gravity="center"
            android:layout_row="3" />

        <Button
            android:id="@+id/cdf_preset_color_blackButton"
            android:background="@color/black"
            android:layout_height="@dimen/cc_fragment_button_height"
            android:layout_width="@dimen/cc_fragment_button_width"
            android:layout_column="3"
            android:layout_gravity="center"
            android:layout_row="4"
            android:layout_margin="10dp" />
        
    </GridLayout>

    <View
        android:id="@+id/colorView"
        android:layout_height="@dimen/color_view_height"
        android:layout_column="0"
        android:layout_columnSpan="2"
        android:layout_gravity="fill_horizontal" />
</GridLayout>